Change small layout issue with flex-end

--- a/components/assignments/assignment/assignment.module.scss
+++ b/components/assignments/assignment/assignment.module.scss
@@ -73,7 +73,7 @@
 
         }
         &.right {
-            align-items: end;
+            align-items: flex-end;
             text-align: right;
             grid-column-start: 7;
             grid-column-end: -1;
@@ -122,7 +122,7 @@
 
         }
         &.right {
-            align-items: end;
+            align-items: flex-end;
             text-align: right;
             grid-column-start: 1;
             grid-column-end: 8;
